# arrival-movie-recommender

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.MD  ROADMAP.md  makefile
backend/: .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/docs/: _generate_pdf.py  single_user_journey_summary.html  single_user_journey_summary.md
backend/env_config/base/: .env.dev.example  .env.production.example  .env.staging.example
backend/env_config/synced/: .env.dev.example  .env.example
backend/mlruns/0/: meta.yaml
backend/mlruns/221067223152740678/: meta.yaml
backend/mlruns/221067223152740678/1a23501ca77a4ed6b739f47b160b1cec/: meta.yaml
backend/mlruns/221067223152740678/231ada3977934e92842f5eb22d45cf02/: meta.yaml
backend/mlruns/221067223152740678/6c0d4968d6274d30bcbaf2ac9db566eb/: meta.yaml
backend/scripts/: backfill_kg_from_db.py  eval_chatbot_vs_baseline.py  eval_kg_rerank_vs_baseline.py  export_swipes.py  failure_analysis_chatbot.py  gen_dev_token.py  migrate.py  seed_eval_data.py  seed_kg.py  seed_onboarding.py
backend/scripts/eval_results/: .gitkeep  eval_chatbot_vs_baseline.csv  eval_chatbot_vs_baseline.summary.json  failure_analysis.csv  failure_analysis.summary.json  kg_rerank.csv  kg_rerank.summary.json  kg_rerank_w0.1_k50.csv  kg_rerank_w0.1_k50.summary.json  kg_rerank_w0.3_k50.csv  kg_rerank_w0.3_k50.summary.json  kg_rerank_w0.5_k50.csv  kg_rerank_w0.5_k50.summary.json  kg_rerank_w0.7_k50.csv  kg_rerank_w0.7_k50.summary.json  kg_rerank_w1.0_k50.csv  kg_rerank_w1.0_k50.summary.json
backend/src/: .gitignore
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/movie_recommender/: main.py
backend/src/movie_recommender/database/: engine.py  (+1 more)
backend/tests/: conftest.py  test_app.py  test_health.py
backend/tests/benchmark/: online_learning_ab.py
backend/tests/integration/: conftest.py  conftest_integration.py  test_api_smoke.py  test_chatbot_stream.py  test_feed_manager_redis.py  test_full_pipeline.py  test_graph_rerank_cypher.py  test_online_recommender.py  test_online_recommender_debug.py
backend/tests/unit/: test_adaptive_learning.py  test_artifact_loader.py  test_build_matrix.py  test_evaluate.py  test_feedback_mapping.py  test_filtering.py  test_item_cf_inference.py  test_item_cf_matrix.py  test_item_cf_metrics.py  test_item_cf_train.py  test_online_exploration.py  test_online_updater.py  test_preprocess_movies.py  test_preprocess_ratings.py  test_ranker_bandit.py  test_recommender_class.py  test_recommender_utils.py  test_split.py  test_svm_pipeline.py
(+372 files in other folders)
