[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
      "fastapi",
      "uvicorn",
      "gunicorn",
      "pydantic",
      "pre-commit>=4.5.1",
      "ruff>=0.15.1",
      "redis>=7.1.1",
      "requests>=2.32.5",
      "dotenv>=0.9.9",
      "python-json-logger>=4.0.0",
      "pandas",
      "pyarrow",
      "scipy",
      "implicit",
      "tqdm",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]
tests = [
    "pytest>=8.0",
]
