[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/movie_recommender"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "movie-recommender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
      "fastapi",
      "uvicorn",
      "gunicorn",
      "pydantic",
      "pre-commit>=4.5.1",
      "ruff>=0.15.1",
      "redis>=7.1.1",
      "requests>=2.32.5",
      "python-json-logger>=4.0.0",
      "firebase-admin",
      "pandas",
      "pyarrow",
      "scipy",
      "implicit",
      "cython",
      "tqdm",
      "sqlalchemy[asyncio]", # asyncio extra pulls in greenlet
      "alembic", # db
      "asyncpg", #db --  async postgres driver (used by the app)
      "psycopg2-binary", # db -- sync postgres driver (for migrations)
      "python-dotenv",
      "neo4j>=5.0.0",
      "httpx>=0.27.0", # async HTTP client (TMDBFetcher)
      "apscheduler>=3.11.2",
      "matplotlib",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
tests = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
